--- a/astonicservice/pom.xml
+++ b/astonicservice/pom.xml
@@ -101,6 +101,12 @@
     <version>2.7</version>
   </dependency>
   <dependency>
+	<groupId>net.sourceforge.plantuml</groupId>
+	<artifactId>plantuml</artifactId>
+	<version>8027</version>
+</dependency>
+
+  <dependency>
     <groupId>org.glassfish.jersey.containers</groupId>
     <artifactId>jersey-container-servlet-core</artifactId>
     <version>2.7</version>
@@ -217,6 +223,7 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>5.0.5</version>
     </dependency>
+    
 
   </dependencies>
   
