--- a/astonicservice/src/main/webapp/WEB-INF/web.xml
+++ b/astonicservice/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
      metadata-complete="true" version="3.0">
-   
+      <listener>
+	    <listener-class>
+	        com.astonicservice.servlet.ServletContextManager
+	    </listener-class>
+	  </listener>
+
      <servlet>
         <servlet-name>Jersey REST Service</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
